yiltc-go-backup/testsuite/negative/mixed_type_comparison.yilt
fn foo()
    let x = 1 == "hello"
